# pilogin

./: .gitignore  CMakeLists.txt  README  main.c  sdltool.c  strtool.c
include/: global.h  sdltool.h  strtool.h
shared/: player2.c
shared/SDL_terminal-1.1.3/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
shared/SDL_terminal-1.1.3/examples/: Makefile.am  Makefile.in  SDLTerminal.py  glcube.c  pyterm.cc  terminal2D.c  terminal3D.c
shared/SDL_terminal-1.1.3/include/: Makefile.am  Makefile.in  SDL_terminal.h
shared/SDL_terminal-1.1.3/src/: Makefile.am  Makefile.in  SDL_terminal.c
